--- a/src/views/css/style.css
+++ b/src/views/css/style.css
@@ -373,3 +373,174 @@ footer{
     padding: 5px 0;
     text-align: center;
 }
+
+/*diseños para el resumen de las compras*/
+.detalles{
+    border: 1px solid gray;
+    border-color: gray;
+    border-collapse: collapse;
+    text-align: center;
+    width: 100%;
+    border-radius: 10px;
+}
+
+
+td{
+    width: 150px;
+    height: 70px;
+    border: 1px solid rgba(247, 221, 221, 0.653) ;
+}
+th{
+   height: 50px;
+   border: 1px solid gray;
+   background-color: rgba(0, 0, 0, 0.959);
+   color: white;
+}
+td img{
+    width: 120px;
+    border-radius: 10px;
+}
+
+
+
+table input{
+    background-color: rgba(255, 0, 0, 0.619);
+    height: 30px;
+    width: 75px;
+    border-radius: 10px;
+    color: rgb(65, 33, 33);
+    border: 1px solid gray;
+    cursor: pointer;
+}
+
+.pay{
+   
+margin-left: 15%;
+
+}
+
+.monto{
+    display: inline-block;
+    margin-right:20px; 
+    font-family: 'Source Sans 3', sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+    color: white;
+    
+
+}
+.tittle{
+    margin-top: 10px;
+    text-align: center;
+    height:50px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    margin-bottom: 1px;
+    width: 100%;
+    font-family: 'Source Sans 3', sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+}
+.ite{
+    width: 10px;
+}
+.inline{
+
+    border-radius: 10px;
+    border: 1px solid gray;
+    width: 100%;
+    margin-bottom: 50px;
+    text-align: center;
+    background-color: black;
+}
+.ult{
+    border: 1px;
+    border-color: gray;
+}
+.ultima{
+    border: 0cap;
+    font-style: italic;
+
+}
+.imgResumen{
+    width: 200px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.duracion, .precio, .accion{
+    width: 50px;
+}
+.principal{
+    text-align: center;
+}
+
+
+/*prueba del encabezado*/
+header{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1{
+    margin: 30px;
+    flex-grow: 1;
+    text-align: center;
+}
+
+header ul{
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 20px;
+    padding: 0;
+}
+
+header li a{
+    text-decoration: none;
+    font-size: 18px;
+    display: block;
+    margin: 10px;
+    color: black;
+    transition: all 0.3s;
+}
+header ul{
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 20px;
+    padding: 0;
+}
+
+
+header h1{
+    margin: 30px;
+    flex-grow: 1;
+    text-align: center;
+
+}
+
+
+header ul li a:hover, header ul li a.active{
+    color: #f44336;
+    border-bottom: 2px solid #f44336;
+}
+
+@media only screen and (min-width: 1200px){
+    header h1{
+        text-align: left;
+    }
+    header ul{
+        justify-content: flex-end;
+    }
+    th,td, .tittle, .inline, .detalles{
+        justify-content: flex-end;
+        text-align: center;
+    }
+    
+}
