--- a/src/views/css/style.css
+++ b/src/views/css/style.css
@@ -51,7 +51,7 @@
 }
 
 .form-margin2{
-    margin: 20px 50px 40px 50px;;
+    margin: 20px 50px 40px 50px;
    }
 
 @media (max-width: 1200px) {
@@ -72,6 +72,7 @@
    .form-margin{
     margin: 5px;
    }
+   
    .form-margin2{
     margin: 5px 15px 10px 15px;;
    }
