--- a/src/views/css/style.css
+++ b/src/views/css/style.css
@@ -25,14 +25,14 @@
 
 
 .title{
-    font-family: 'Source Sans 3', sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 35px;
     font-weight: 500;
        
 }
 
 .eslogan{
-    font-family: cursive;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 17px;
     text-align: center;
     display: inline-block;
@@ -53,6 +53,38 @@
 .form-margin2{
     margin: 20px 50px 40px 50px;
    }
+
+#login{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #f44336;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+#login:hover{
+    background-color: #a51f16;
+    color: white;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
+}
+
+.signUp{
+    text-decoration: none;
+    margin: 10px;
+    color: #f44336;
+    border-bottom: 2px solid #f44336;
+    transition: all 0.3s;
+}
+
+.signUp:hover{
+    color: #a51f16;
+    border-bottom: 2px solid #a51f16;
+}
 
 @media (max-width: 1200px) {
     .not-img{
